--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body,
+/* body,
 html {
   width: 100%;
   height: 100%;
@@ -8,50 +8,153 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+} */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.background {
+  height: 70vh;
+  background: url(img/cc-bg-1.jpg) no-repeat center center fixed; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  margin: 0.65rem 0;
+}
+
+.bio p {
+  margin: 0.4rem 0;
 }
 
 .container {
-  height: 100vh;
+  width: 90%;
+  /* border: 1px solid red; */
+  margin: 1.5rem auto;
 }
 
 .header-image {
-  text-align: center;
-  width: 200px;
   border-radius: 50%;
+  width: 200px;
+  height: auto;
+  margin: 10px auto;
 }
 
-h1 {
-  font-size: 3rem;
-  color: #e2dbdb;
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-hr {
-  border-color: #f05f44;
-  border-width: 3px;
-  max-width: 65px;
+.main h1, .main p {
+  color: oldlace;
 }
 
-.buffer {
-  height: 10rem;
+.profile {
+  display: flex;
+  border-bottom: 1px solid grey;
+  padding-bottom: 25px;
 }
 
-.btn {
+.about {
+  width: 50%;
+  padding: 10px;
+  margin: 15px;
+}
+
+.bio {
+  width: 50%;
+  padding: 10px;
+  /* border-left: 1px solid grey; */
+  margin: 15px;
+}
+
+.bio-info {
+  display: flex;
+}
+
+.bio-key {
+  width: 40%;
+  font-weight: bold;
+}
+
+.bio-value {
+  width: 60%;
+}
+
+.contact {
+  /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact h3 {
+  margin-top: 0.65rem;
+  margin-bottom: 1.65rem;
+  /* border: 1px solid black; */
+}
+
+.about p {
+  line-height: 25px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid grey;
+  padding: 1rem;
+  width: 450px;
+  border-radius: 5px;
+  /* background-color: cornflowerblue; */
+  /* box-shadow: green; */
+}
+
+label {
+  display: block;
+  margin: .5rem 0;
+}
+
+.contact-input input {
+  width: 100%;
+  padding: 0.5rem 10px;
+}
+
+input,
+textarea {
+  padding: 16px;
+  background-color: #edf2f7;
+  outline: none;
+  border: none;
+  border-radius: 0.25rem;
+}
+
+.contact-input textarea {
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
+  resize: none;
+  padding: 10px;
+}
+
+.submit {
+  padding: 10px;
+  background-color: #5baefe;
+  color: white;  
+  font-size: 0.875rem;
   font-weight: 700;
-  border-radius: 300px;
-  text-transform: uppercase;
-}
-
-.btn-primary {
-  background-color: #f05f44;
-  border-color: #f05f44;
-}
-
-.btn-primary:hover {
-  background-color: #ee4b08;
-  border-color: #ee4b08;
-  border-width: 4px;
-}
-
-.btn-xl {
-  padding: 1rem 2rem;
+  /* border-radius: 0.75rem 0.75rem 0.75rem 0; */
+  cursor: pointer;
+  margin: 0.5rem 0;
 }
